# SFML_Engine_Template

./: .gitignore  CMakeLists.txt  readme.md
CMB/ECS/: CMakeLists.txt
CMB/ECS/include/: Component.hpp  Entity.hpp  Manager.hpp
CMB/ECS/src/: CMakeLists.txt  Entity.cpp  Manager.cpp
CMB/include/: ECS.hpp  Screen.hpp  Sprite.hpp
CMB/src/: Sprite.cpp
cmake/: Conan.cmake
include/: AssetManager.hpp  CallbackManager.hpp  DefaultScreen.hpp  Game.hpp  GameConfig.hpp  GameScreen.hpp  InputManager.hpp  MainMenuScreen.hpp  Pepe.hpp  Pipe.hpp  PipeManager.hpp  State.hpp  StateManager.hpp  TimingManager.hpp  Util.hpp
include/Entities/: Pepe.hpp  Pipe.hpp  Player.hpp
include/Managers/: AssetManager.hpp  CallbackManager.hpp  PipeManager.hpp  ScreenManager.hpp  StateManager.hpp
include/Screens/: DefaultScreen.hpp  GameOverScreen.hpp  GameScreen.hpp
src/: AssetManager.cpp  CMakeLists.txt  CallbackManager.cpp  DefaultScreen.cpp  Game.cpp  GameOverScreen.cpp  GameScreen.cpp  InputManager.cpp  MainMenuScreen.cpp  Pepe.cpp  Pipe.cpp  PipeManager.cpp  TimingManager.cpp  Util.cpp  main.cpp
src/Entities/: CMakeLists.txt  Pepe.cpp  Player.cpp
src/Managers/: AssetManager.cpp  CMakeLists.txt  CallbackManager.cpp  InputManager.cpp  PipeManager.cpp  ScreenManager.cpp  StateManager.cpp
src/Screens/: CMakeLists.txt  DefaultScreen.cpp  GameOverScreen.cpp  GameScreen.cpp  MainMenuScreen.cpp
